--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -6,7 +6,6 @@
         <prefer>
             <family>Liberation Serif</family>
             <family>Joy Pixels</family>
-            <family>Noto Color Emoji</family>
         </prefer>
     </alias>
     <alias>
@@ -14,7 +13,6 @@
         <prefer>
             <family>Liberation Sans</family>
             <family>Joy Pixels</family>
-            <family>Noto Color Emoji</family>
         </prefer>
     </alias>
     <alias>
@@ -22,15 +20,20 @@
         <prefer>
             <family>Linux Biolinum</family>
             <family>Joy Pixels</family>
-            <family>Noto Color Emoji</family>
         </prefer>
     </alias>
     <alias>
         <family>monospace</family>
         <prefer>
-            <family>Noto Sans Mono</family>
             <family>Liberation Mono</family>
-            <family>Braille</family>
+            <family>Joy Pixels</family>
+        </prefer>
+    </alias>
+    <alias>
+        <family>mono</family>
+        <prefer>
+            <family>Liberation Mono</family>
+            <family>Joy Pixels</family>
         </prefer>
     </alias>
 </fontconfig>
